[tool.poetry]
name = "flask_app"
version = "0.1.0"
description = ""
authors = ["Diego Rodriguez Mancini <diegorodriguezmancini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.0"
flask_ralidator = {path = "../ralidator/connectors/flask_ralidator", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
